revamped index page

--- a/index.html
+++ b/index.html
@@ -4,25 +4,6 @@ title: Home | Damilola Oduronbi
 ---
 
 {% include illustration.html %}
-<div class="pt-4 pt-md-0">
+<div class="pt-4 pt-md-0 intro">
   {% include intro.html %}
-</div>
-<div class="container pt-4">
-  <div class="row">
-    <div class="col-md-5">
-      <h4 class="color-secondary font-bold">Recent Projects</h4>
-      {% include projects.html %}
-    </div>
-    <div class="col-md-3">
-      <h4 class="color-secondary font-bold">Development</h4>
-      {% include development.html %}
-    </div>
-    <div class="col-md-4">
-      <h4 class="color-secondary font-bold">Design and Prototyping</h4>
-      {% include design.html %}
-      <div class="mt-3"></div>
-      <h4 class="color-secondary font-bold">Preferred Environment</h4>
-      {% include environment.html %}
-    </div>
-  </div>
 </div>
