started notes page

--- a/notes.html
+++ b/notes.html
@@ -2,29 +2,62 @@
 layout: default
 title: Notes, Snipps & Hacks | Damilola Oduronbi
 ---
-<div class="container pt-4 pt-md-0">
-  <h1>{{ "Javascript" }}</h1>
-  <strong>Code Sythax Highlighting</strong>
-  {% highlight ruby linenos %}
-    <script>
-      "use strict";
-      // code lives here...
-    </script>
-  {% endhighlight %}
-  <h1>{{ "Jekyll" }}</h1>
-  <strong>Code Sythax Highlighting</strong>
-  {% highlight ruby linenos %}
-    ---
-    Front matter matters a lot
-    ---
-  {% endhighlight %}
-  <h1>{{ "React" }}</h1>
-  <strong>Code Sythax Highlighting</strong>
-  {% highlight ruby linenos %}
-    import React from 'react';
-
-    function NotesSnippsHacks() {
-      return ...
-    }
-  {% endhighlight %}
+<div class="intro my-5">
+  <div class="container text-center">
+    <div>
+      <h1>{{ "HTML" }}</h1>
+      <p class="text-secondary">
+        <small>
+          HTML (HyperText Markup Language) is the most basic building block of the Web. It defines the meaning and structure of web content. Other technologies besides HTML are generally used to describe a web page's appearance/presentation (CSS) or functionality/behavior (JavaScript).
+          <sup><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">[MDN]</a></sup>
+        </small>
+        <br />
+        <a href="" class="btn btn-link">HTML snippets and notes</a>
+      </p>
+    </div>
+    <div>
+      <h1>{{ "CSS" }}</h1>
+      <p class="text-secondary">
+        <small>
+          Cascading Style Sheets (CSS) is a stylesheet language used to describe the presentation of a document written in HTML or XML (including XML dialects such as SVG, MathML or XHTML). CSS describes how elements should be rendered on screen, on paper, in speech, or on other media.
+          <sup><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">[MDN]</a></sup>
+        </small>
+        <br />
+        <a href="" class="btn btn-link">CSS snippets and notes</a>
+      </p>
+    </div>
+    <div>
+      <h1>{{ "JavaScript" }}</h1>
+      <p class="text-secondary">
+        <small>
+          JavaScript (JS) is a lightweight, interpreted, or just-in-time compiled programming language with first-class functions. While it is most well-known as the scripting language for Web pages, many non-browser environments also use it, such as Node.js, Apache CouchDB and Adobe Acrobat. JavaScript is a prototype-based, multi-paradigm, single-threaded, dynamic language, supporting object-oriented, imperative, and declarative (e.g. functional programming) styles. Read more about JavaScript.
+          <sup><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">[MDN]</a></sup>
+        </small>
+        <br />
+        <a href="" class="btn btn-link">JavaScript snippets and notes</a>
+      </p>
+    </div>
+    <div>
+      <h1>{{ "React" }}</h1>
+      <p class="text-secondary">
+        <small>
+          React is an open-source JavaScript library for building user interfaces. It is maintained by Facebook and a community of individual developers and companies. React can be used as a base in the development of single-page or mobile applications.
+          <sup><a href="https://en.wikipedia.org/wiki/React_(web_framework)">[Wikipedia]</a></sup>
+        </small>
+        <br />
+        <a href="" class="btn btn-link">React snippets and notes</a>
+      </p>
+    </div>
+    <div>
+      <h1>{{ "Jekyll" }}</h1>
+      <p class="text-secondary">
+        <small>
+          Jekyll is a simple, blog-aware, static site generator for personal, project, or organization sites. Written in Ruby by Tom Preston-Werner, GitHub's co-founder, it is distributed under the open source MIT license.
+          <sup><a href="https://en.wikipedia.org/wiki/Jekyll_(software)" target="_blank">[Wikipedia]</a></sup>
+        </small>
+        <br />
+        <a href="" class="btn btn-link">Jekyll snippets and notes</a>
+      </p>
+    </div>
+  </div>
 </div>
